# analizavet-v2

./: .gitignore  .secrets.toml.example  Estandarización de Parámetros Veterinarios Máquinas.md  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  clinical_standards.py  dead_code_report.md  executive_summary.md  iniciar.sh  log_nx600_vivo.txt  log_prueba_upload.txt  pyproject.toml  requirements.txt  settings.toml
.atl/: skill-registry.md
alembic/: env.py
alembic/versions/: 57ba68ffb5ff_add_patient_archive_table.py  625785d8d616_add_sources_received_to_patient_model.py  7a1b2c3d4e5f_add_raw_data_log_table.py  8ceb0d09a568_add_dataquarantine_table.py
app/: broker.py  config.py  database.py  logging_config.py  main.py  mllp_state.py
app/commands/: clear_db.py
app/models/: __init__.py  lab_value.py  patient.py  patient_image.py  patient_registry.py  test_result.py
app/routers/: health.py  mllp.py  patients.py  reception.py  reports.py  taller.py
app/satellites/: __init__.py  base.py
app/schemas/: __init__.py  flagging.py  taller.py
app/services/: appsheet.py  provenance_recorder.py  session_code_extractor.py
app/tasks/: __init__.py  broker.py  fujifilm_processor.py  hl7_processor.py  provenance_actors.py
app/templates/: base.html  mllp_status_button.html  taller.html
data/: clinical_standards.json
sdd/fix-patient-data-cross-contamination/: tasks.md
sdd/patient-raw-data-provenance/: design.md
static/css/: main.css
tests/: conftest.py
tests/e2e/: conftest.py  test_delete_flow.py  test_full_system.py
tests/integration/: test_dramatiq.py  test_health.py  test_jornada_api.py  test_mllp_server.py  test_patient_archive_api.py  test_patient_archiving_api.py  test_pipeline.py  test_reception_api.py  test_reception_flow.py  test_reception_upload.py  test_reports_api.py  test_taller_api.py  zz_test_patients_ui.py
tests/unit/: test_adapters.py  test_algorithms_registry.py  test_algorithms_unit_validation.py  test_baul.py  (+23 more)
(+109 files in other folders)
